Add category and section pagination.

--- a/_posts/2018-07-22-london-week-10.md
+++ b/_posts/2018-07-22-london-week-10.md
@@ -4,6 +4,7 @@ title: London Week 10
 cover: https://i.imgur.com/NHFwm2a.jpg
 caption: A mustang I saw at a London supercar car show!
 image: https://i.imgur.com/KaWHsivl.png
+tags: [london-internship]
 ---
 
 I went to a carshow this weekend! 
