--- a/_posts/2018-07-29-london-week-11.md
+++ b/_posts/2018-07-29-london-week-11.md
@@ -4,6 +4,7 @@ title: London Week 11
 cover: https://i.imgur.com/5LmntYR.jpg
 caption: Llansteffan Castle in Wales!
 image: https://i.imgur.com/RUWg7zWl.jpg
+tags: [london-internship]
 ---
 
 I went to Lords (cricket) with the Z/Yen team and to Wales with Ben and Dalton this week!
