Replaced markdown line breaks with HTML horizontal rules. Fixed captions.

--- a/_posts/london-internship/2018-07-29-london-week-11.md
+++ b/_posts/london-internship/2018-07-29-london-week-11.md
@@ -21,13 +21,14 @@ Anyhow, the cricket match was T-20, so it was only 4 hours long as opposed to so
 
 Friday was the last day Ian and I would see Michael as he would be going off to vacation and will return after we leave. It was an especially busy day for me since I was trying to complete as many of the projects that he had assigned me as possible before he headed out. We also had a final performance review with him, and at the end of it, **he offered Ian and me positions at Z/Yen should we come back!**
 
----
+<hr>
 
 [![Cardiff Castle!](https://i.imgur.com/zIy3PECl.jpg)](https://goo.gl/maps/iSopvypKgE62)
 <p class="caption">Cardiff Castle!</p>
 
 Ben, Dalton and I went on a roadtrip to some of the costal regions of Wales. We also stopped in Bristol.
 ![Bristol](https://i.imgur.com/aobj7tZl.jpg)
+<p class="caption">Some art on a wall near the center of Bristol</p>
 
 We had a fantastic meal in a small town, Pembrooke, and saw plenty of castles all across Wales.
 ![A fantastic fish butty at The Royal George](https://i.imgur.com/hpL2Vjkl.jpg)
