--- a/_posts/london-internship/2018-07-22-london-week-10.md
+++ b/_posts/london-internship/2018-07-22-london-week-10.md
@@ -16,7 +16,7 @@ I continued working on the project that Michael assigned me to throughout the we
 
 Most of the office has been preparing for our new report coming out on 25 July titled "Smart Ledgers & Collective Defined Contribution Pensions." This is the first report that I haven't worked on before its release, so I'm excited to attend the report launch and read it.
 
----
+<hr>
 
 [The car show](https://www.facebook.com/events/1847068678659108/) was literally in the middle of Sloan Street, London. The streets are lined with high-end designer stores. 
 
@@ -24,6 +24,6 @@ Most of the office has been preparing for our new report coming out on 25 July t
 <p class="caption">A stock McLaren 720 S.</p>
 
 ![A really nice wrap on an unknown model](https://i.imgur.com/AQ0FXrbl.jpg)
-<p class="caption">A really nice wrap on an unknown model.</p>
+<p class="caption">A really nice wrap on what looks to be a Ferrari 812 Superfast.</p>
 
 Check out some more pictures of this weekend on [my Instagram](https://www.instagram.com/nishnha/).
